--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -54,5 +54,5 @@ jobs:
         TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
       run: |
         python3 setup.py sdist bdist_wheel
-        # twine upload dist/*
-        twine upload --repository-url https://test.pypi.org/legacy/ dist/*
+        twine upload dist/*
+        # twine upload --repository-url https://test.pypi.org/legacy/ dist/*
